[tool.poetry]
name = "brewblox-ctl"
version = "1.0.0"
description = "Brewblox management tool"
authors = ["BrewPi <development@brewpi.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.6,<4"
requests = "^2.26.0"
click = "^8.0"
python-dotenv = {version = "^0.20.0", extras = ["cli"]}
configobj = "^5.0.6"
zeroconf = "^0.38"
pyusb = ">=1.2"
pyserial = ">=3"
docker = "^5.0.3"
docker-compose = "^1.29.2"
websocket-client = ">=0.32.0,<1"
psutil = "^5.8.0"
"ruamel.yaml" = "^0.17.17"

[tool.poetry.dev-dependencies]
pytest-cov = "*"
pytest-flake8 = "*"
flake8 = "*"
autopep8 = "*"
pytest-mock = "*"
flake8-quotes = "*"
httpretty = "1.0.5"
importlib-metadata = "<4"

[build-system]
requires = ["poetry-core~=1.0"]
build-backend = "poetry.core.masonry.api"
