[tool.poetry]
name = "brewblox-ctl"
version = "1.0.0"
description = "Brewblox management tool"
authors = ["BrewPi <development@brewpi.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4"
requests = "^2.31.0"
click = "^8.1.7"
python-dotenv = { extras = ["cli"], version = "^0.21.1" }
configobj = "^5.0.6"
zeroconf = "^0.47.3"
pyusb = "^1.2.1"
pyserial = "^3.5"
psutil = "^5.9.4"
"ruamel.yaml" = "^0.17.21"
packaging = "^23.0"
passlib = "^1.7.4"
pydantic = "^2.6.4"
jinja2 = "^3.1.3"

[tool.poetry.group.dev.dependencies]
pytest-cov = "*"
flake8 = ">=5"
autopep8 = "*"
pytest-mock = "*"
flake8-quotes = "*"
httpretty = "1.0.5"
pyyaml = "^6.0"

[build-system]
requires = ["poetry-core~=1.0"]
build-backend = "poetry.core.masonry.api"
